--- a/templates/user_auth/auth_page.html
+++ b/templates/user_auth/auth_page.html
@@ -13,9 +13,9 @@
     </div>
     <BR>
     <div>
-        <div><h2 style="text-align:center">Нямаш профил? Регистрирай се тук.</h2></div>
+        <div><h2 style="text-align:center">Все още не си се записал? Направи го тук.</h2></div>
         <div align="center"><a href="{% url 'sign up' %}">
-            <button class="btn btn-primary btn-lg" title="Нямаш профил? Кликни тук.">Регистрация
+            <button style="background-color: purple" class="btn btn-primary btn-lg">Запиши се
             </button>
         </a></div>
     </div>
