--- a/templates/user_profile/edit_employee_profile.html
+++ b/templates/user_profile/edit_employee_profile.html
@@ -5,7 +5,18 @@
     <br><br><br>
     <div>
         <form method="post" action="{% url 'employee profile edit' user.pk %}">
-
+            <div align="center">
+                {% if form.errors %}
+                    <div class="list-group-item-warning" style="color: whitesmoke; background-color: red; max-width: 300px">
+                        {% for field in form %}
+                            {% for error in field.errors %}
+                                <h4> {{ error }} </h4>
+                            {% endfor %}
+                        {% endfor %}
+                    </div>
+                {% endif %}
+            </div>
+        <br>
             <div align="center">
                 <h3><label for='employee_first_name'>Име:&nbsp</label>{{ form.employee_first_name }}</h3>
                 <h3><label for='employee_last_name'>Фамилия:&nbsp</label>{{ form.employee_last_name }}</h3>
