--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
                     <h2>AIM TRAVEL</h2>
                     <p>Ще получиш информация от хора с реален опит със студентските бригади
                         <br> и партньорства с работодатели, сключени от първо лице!</p>
-                    <a href="{% url 'show additional services' %}">
+                    <a href="{% url 'services' %}">
                         <button>ВИЖ ДОПЪЛНИТЕЛНИТЕ УСЛУГИ</button>
                     </a>
                 </div>
